spices/sqlite/tests/errors/sqlite-stmt-use-after-finalize.tur
;; U1 negative fixture: Stmt is :linear; stmt-finalize consumes it and
;; stmt-step borrows, so stepping a finalized statement is a use-after-free.
;;   tur check -Xsubstructural tests/errors/sqlite-stmt-use-after-finalize.tur
;;   => error [TUR-E0101]: linear value 'st' used after being consumed
;; Compile-fail fixture (see sqlite-db-use-after-close.tur for the note).

(defmodule sqlite_stmt_use_after_finalize_test
  (export)

(import sqlite/db   :refer [Db db-prepare])
(import sqlite/stmt :refer [stmt-step stmt-finalize])

(defn use-after-finalize [^borrow db : Db] : int
  (let [st (ok-val (db-prepare db "SELECT 1"))]
    (do
      (stmt-finalize st)   ;; single legal consumption
      (stmt-step st))))    ;; ERROR TUR-E0101: borrow after consume

) ;; end defmodule sqlite_stmt_use_after_finalize_test
